--- a/package.json
+++ b/package.json
@@ -19,6 +19,15 @@
     "cypress": "^9.6.0"
   },
   "devDependencies": {
+    "cucumber-html-reporter": "^5.5.0",
     "cypress-cucumber-preprocessor": "^4.3.1"
+  },
+  "cypress-cucumber-preprocessor": {
+    "cucumberJson": {
+     "generate": true,
+     "outputFolder": "cucumber_report",
+     "filePrefix": "",
+     "fileSuffix": ".cucumber"
+    }
   }
 }
